--- a/src/renderer/stylesheets/components/_tweet.scss
+++ b/src/renderer/stylesheets/components/_tweet.scss
@@ -1,3 +1,14 @@
 .tweet {
+  border-bottom: 1px solid #e1e8ed;
   display: flex;
+  padding: 8px;
+}
+
+.tweet-avator {
+  height: 48px;
+  width: 48px;
+}
+
+.tweet-body {
+  margin: 8px;
 }
