--- a/src/renderer/stylesheets/components/_tweet.scss
+++ b/src/renderer/stylesheets/components/_tweet.scss
@@ -1,5 +1,7 @@
+@import '../config/color';
+
 .tweet {
-  border-bottom: 1px solid #e1e8ed;
+  border-bottom: 1px solid $border-color;
   display: flex;
   padding: 8px;
 }
@@ -9,6 +11,24 @@
   width: 48px;
 }
 
-.tweet-body {
+.tweet-content {
+  display: flex;
+  flex-direction: column;
   margin: 8px;
+}
+
+.tweet-display-name {
+  font-size: 18px;
+  margin-right: 4px;
+}
+
+.tweet-screen-name {
+  color: $sub-text-color;
+  font-size: 14px;
+  margin-right: 4px;
+}
+
+.tweet-posted-time {
+  color: $sub-text-color;
+  font-size: 14px;
 }
