add header container

--- a/src/renderer/stylesheets/config/_color.scss
+++ b/src/renderer/stylesheets/config/_color.scss
@@ -1,3 +1,5 @@
 $border-color: #e1e8ed;
 $sub-text-color: #8899a6;
 $link-text-color: #0ac4fc;
+$primary-background-color: rgba(10, 196, 252, .8);
+$primary-text-color: #fff;
