--- a/src/renderer/stylesheets/application.scss
+++ b/src/renderer/stylesheets/application.scss
@@ -1,4 +1,7 @@
+@import './containers/header';
+
 @import './components/tweet';
+@import './components/button';
 @import './components/posted_image';
 @import './config/animation';
 
