--- a/src/renderer/stylesheets/config/_color.scss
+++ b/src/renderer/stylesheets/config/_color.scss
@@ -2,4 +2,8 @@ $border-color: #e1e8ed;
 $sub-text-color: #8899a6;
 $link-text-color: #0ac4fc;
 $primary-background-color: rgba(10, 196, 252, .8);
+$primary-background-hover-color: #0ac4fc;
 $primary-text-color: #fff;
+$normal-background-color: #e9e9e9;
+$normal-background-hover-color: #dfdfdf;
+$normal-text-color: #000;
