--- a/src/renderer/stylesheets/config/_color.scss
+++ b/src/renderer/stylesheets/config/_color.scss
@@ -7,3 +7,4 @@ $primary-text-color: #fff;
 $normal-background-color: #e9e9e9;
 $normal-background-hover-color: #dfdfdf;
 $normal-text-color: #000;
+$tweets-area-background-color: #fff;
