--- a/src/renderer/stylesheets/application.scss
+++ b/src/renderer/stylesheets/application.scss
@@ -1,9 +1,13 @@
 @import "font-awesome/scss/font-awesome";
 
 @import './containers/header';
+@import './containers/timeline';
 
 @import './components/tweet';
 @import './components/button';
 @import './components/posted_image';
 @import './config/animation';
 
+body {
+  overflow: hidden;
+}
