make post_buttom component

--- a/src/renderer/stylesheets/application.scss
+++ b/src/renderer/stylesheets/application.scss
@@ -6,6 +6,8 @@
 @import './components/tweet';
 @import './components/button';
 @import './components/posted_image';
+@import './components/_post_button';
+
 @import './config/animation';
 
 body {
