--- a/src/renderer/stylesheets/config/_color.scss
+++ b/src/renderer/stylesheets/config/_color.scss
@@ -8,3 +8,6 @@ $normal-background-color: #e9e9e9;
 $normal-background-hover-color: #dfdfdf;
 $normal-text-color: #000;
 $tweets-area-background-color: #fff;
+$text-box-border-color: rgba(10, 196, 252, .25);
+$text-box-border-focus-color: #9de7fd;
+$post-modal-background-color: rgba(10, 196, 252, .1);
