--- a/src/renderer/stylesheets/application.scss
+++ b/src/renderer/stylesheets/application.scss
@@ -7,6 +7,7 @@
 @import './components/button';
 @import './components/posted_image';
 @import './components/_post_button';
+@import './components/_post_form';
 
 @import './config/animation';
 
